# ExRate 리팩토링 (예외 Throws 제거)